<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8E7F0"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="#FFFFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height='wrap_content'
                android:orientation="vertical"
                android:padding="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:cardBackgroundColor="#8B7FFF"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="24dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/bw"
                            android:textColor="#FFFFFFFF"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1"
                        android:orientation="vertical">


                        <TextView
                           android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/b_watch"
                            android:textColor="#000000"
                            android:textStyle="bold"
                            android:textSize="17sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/sign"
                            android:textColor="#756C6C"
                            android:textSize="12sp"/>

                    </LinearLayout>

                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    app:boxBackgroundColor="#F5F4F8"
                    app:boxBackgroundMode="filled"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintTextColor="#9E9EA7">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_or_Mobile"
                        android:inputType="textEmailAddress"
                        android:paddingStart="16dp"
                        android:paddingTop="14dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="14dp"
                        android:textColor="#000000"
                        android:textColorHint="#9E9EA7"
                        android:textSize="14sp"
                        app:boxBackgroundColor="#757575"
                        app:boxBackgroundMode="filled" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                   android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    app:boxBackgroundColor="#F5F4F8"
                    app:boxBackgroundMode="filled"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintTextColor="#9E9EA7"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#9E9EA7">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="16dp"
                        android:paddingTop="14dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="14dp"
                        android:textColor="#000000"
                        android:textColorHint="#909099"
                        android:textSize="14sp"
                        app:boxBackgroundColor="#F5F4F8"
                        app:boxBackgroundMode="filled" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="32dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvForgotPassword"
                        android:layout_weight="1"
                        android:text="@string/forgot_pass"
                        android:textColor="#756C6C"
                        android:textSize="13sp"/>

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:id="@+id/btnLogin"
                        android:minWidth="0dp"
                        android:paddingStart="28dp"
                        android:paddingEnd="28dp"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        app:backgroundTint="#6C5FFC"
                        app:cornerRadius="22dp"/>

                </LinearLayout>


                <View
                   android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="24dp"
                    android:background="#F0EFF4"/>


                <LinearLayout
                   android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                       android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_acc"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="4sp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/register"
                        android:textColor="#756C6C"
                        android:textSize="12sp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:minWidth="0dp"
                        android:layout_gravity="center"
                        android:paddingStart="32dp"
                        android:paddingEnd="32dp"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        app:backgroundTint="#FFFFFF"
                        app:cornerRadius="22dp"
                        app:strokeColor="#E5E4EB"
                        app:strokeWidth="1dp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>